--- a/LaTeX/LaTeXample.tex
+++ b/LaTeX/LaTeXample.tex
@@ -15,13 +15,17 @@
 \usepackage[utf8]{inputenc}
 \usepackage{fancyvrb}
 \usepackage{listings}
-\lstset{language=TeX}
+\usepackage{tikz}
 \usepackage{lmodern}
+
+\usetikzlibrary{mindmap,trees}
+
+\lstset{language=TeX}
+
+\title{}
 \author{Steve Clement - CIRCL \emph{TLP:GREEN}}
-\title{Information inSecurity at the dawn of digital mobility}
 \institute{}
-%\date{\today}
-\date{October 11, 2011}
+\date{\today}
 
 \begin{document}
 \include{content}
