- Added more examples - created output directory for PDFs - Added on more example to content.tex

--- a/content.tex
+++ b/content.tex
@@ -223,3 +223,13 @@ one & two & three & four \\ \hline
 9 & ten \\
 \end{tabular}
 \end{frame}
+
+% Page 11
+\begin{frame}[t,fragile]{LaTeX Example}
+
+    `It\textquotesingle s a nice day!' \\
+    OR
+    `It{\textquotesingle}s a nice day!' \\
+    
+\end{frame}
+
