- Added color to title. Scaled tikz. Some refactorization of the LaTeX

--- a/LaTeXample.tex
+++ b/LaTeXample.tex
@@ -17,13 +17,17 @@
 \usepackage{listings}
 \usepackage{tikz}
 \usepackage{lmodern}
+\usepackage{color}
+\usepackage{textcomp}
 
 \usetikzlibrary{mindmap,trees}
+
+\definecolor{amber}{rgb}{1.0, 0.75, 0.0}
 
 \lstset{language=TeX}
 
 \title{}
-\author{Steve Clement - CIRCL \emph{TLP:GREEN}}
+\author{Steve Clement - CIRCL \emph{TLP:\textcolor{green}{GREEN}}}
 \institute{}
 \date{\today}
 
