- Added headlines to slides. Added tikz scale example. umlaut clarification

--- a/LaTeXample.tex
+++ b/LaTeXample.tex
@@ -24,6 +24,12 @@
 
 \definecolor{amber}{rgb}{1.0, 0.75, 0.0}
 
+\tikzset{global scale/.style={
+    scale=#1,
+    every node/.style={scale=#1}
+  }
+}
+
 \lstset{language=TeX}
 
 \title{}
