--- a/content.tex
+++ b/content.tex
@@ -7,7 +7,7 @@
 \end{frame}
 
 % Page2
-\begin{frame}[t,fragile]{LaTeX Example - Bold text, comments and fragile}
+\begin{frame}[t,fragile]{\LaTeX\ Example - Bold text, comments and fragile}
 \begin{itemize}
   \item This is {\bf bold text}
   \begin{lstlisting}
@@ -28,7 +28,7 @@ fragile is needed for verbatim/lstlisting
 \end{frame}
 
 % Page3
-\begin{frame}[t,fragile]{LaTeX Example - New lines, center stuff, 3-dots}
+\begin{frame}[t,fragile]{\LaTeX\ Example - New lines, center stuff, 3-dots}
 \begin{itemize}
   \item How to insert new lines?
   Keep it real dude, this is not PowerPoint!
@@ -54,7 +54,7 @@ fragile is needed for verbatim/lstlisting
 \end{frame}
 
 % Page4
-\begin{frame}[t,fragile]{LaTeX Example - Tikz mind-map}
+\begin{frame}[t,fragile]{\LaTeX\ Example - Tikz mind-map}
 %\begin{tikzpicture}[thick,scale=0.6, every node/.style={scale=0.6}]
   \begin{center}
     \begin{tikzpicture}[thick,scale=0.5, every node/.style={transform shape}]
@@ -75,14 +75,18 @@ fragile is needed for verbatim/lstlisting
           child { node[concept] {databases} }
           child { node[concept] {WWW} }
         }
-        child[concept color=red] { node[concept] {technical} }
+        child[concept color=red] {
+          node[concept] {technical}
+          [clockwise from=-30]
+          child { node[concept] {チーサート} }
+         }
         child[concept color=orange] { node[concept] {theoretical} };
     \end{tikzpicture}
   \end{center}
 \end{frame}
 
 % Page5
-\begin{frame}[t,fragile]{LaTeX Example - URLs, umlaut}
+\begin{frame}[t,fragile]{\LaTeX\ Example - URLs, umlaut}
 
   \begin{lstlisting}
      \url{}
@@ -90,7 +94,7 @@ fragile is needed for verbatim/lstlisting
 
 \url{http://wiki.localhost.lu}
 
-Otherwise weird errors appear in your LaTeX console. You need to usepackage url
+Otherwise weird errors appear in your \LaTeX\ console. You need to usepackage url
 
 If you need some umlaut this nomenclature needs to be used:
   \begin{lstlisting}
@@ -110,7 +114,7 @@ More umlaut sweetness: $\grave{e}$, \`{e}, $\hat{e}$, \^{e}, $\acute{e}$, \'{e}
 \end{frame}
 
 % Page6
-\begin{frame}[t,fragile]{LaTeX Example - simple math}
+\begin{frame}[t,fragile]{\LaTeX\ Example - simple math}
 
 %So you want to write this: (a/x)\verb|^|2
 
@@ -131,7 +135,7 @@ But to beautify it we use \\left and \\right:
 \end{frame}
 
 % Page7
-\begin{frame}[t,fragile]{LaTeX Example - more math symbols}
+\begin{frame}[t,fragile]{\LaTeX\ Example - more math symbols}
 
 %Some Math/symbols:
 
@@ -159,7 +163,7 @@ $\approx$
 \end{frame}
 
 % Page8
-\begin{frame}[t,fragile]{LaTeX Example - More symbols}
+\begin{frame}[t,fragile]{\LaTeX\ Example - More symbols}
   \begin{lstlisting}
 $\equiv$
 $\infty$
@@ -185,7 +189,7 @@ $\backslash$
 \end{frame}
 
 % Page9
-\begin{frame}[t,fragile]{LaTeX Example - Greek letters}
+\begin{frame}[t,fragile]{\LaTeX\ Example - Greek letters}
 
 %Greek Letters:
   \begin{lstlisting}
@@ -208,7 +212,7 @@ Uppercase letters start with an Uppercase letter :) $\alpha$
 \end{frame}
 
 % Page10
-\begin{frame}[t,fragile]{LaTeX Example - Tables}
+\begin{frame}[t,fragile]{\LaTeX\ Example - Tables}
 
 %Quick table:
 
@@ -228,7 +232,7 @@ one & two & three & four \\ \hline
 \end{frame}
 
 % Page 11
-\begin{frame}[t,fragile]{LaTeX Example - quotes}
+\begin{frame}[t,fragile]{\LaTeX\ Example - quotes}
 
   `It\textquotesingle s a nice day!' \\
   OR \\
@@ -237,14 +241,14 @@ one & two & three & four \\ \hline
 \end{frame}
 
 % Page 12
-\begin{frame}[t,fragile]{LaTeX Example - Upside down !}
+\begin{frame}[t,fragile]{\LaTeX\ Example - Upside down !}
 
   'To quickly turn a ? or ! upside down use the back-tick `! `? \\
 
 \end{frame}
 
 % Page 13
-\begin{frame}[t,fragile]{LaTeX Example - Tikz scaling and drawing}
+\begin{frame}[t,fragile]{\LaTeX\ Example - Tikz scaling and drawing}
 
   \framebox{\begin{tikzpicture}[thick]
     \draw [dashed] (1,12) -- (11,12);
@@ -270,6 +274,13 @@ one & two & three & four \\ \hline
     \draw [dashed] (1,12) -- (11,12);
     \node[above] at (4,11) {1}; \node[above] at (8,11) {true};
   \end{tikzpicture}}
+\end{frame}
+
+% Page 14
+\begin{frame}[t,fragile]{\LaTeX\ Example - CJK Support }
+
+  There is full support for CJK in \LaTeX\ \\
 
 \end{frame}
+
 
